GitOps/Kubernetes/Calico/Ceph_NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ceph-mon
  namespace: rook-ceph
spec:
  podSelector:
    matchLabels:
      app: rook-ceph-mon  # Ceph 모니터 Pod 선택
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 6789
    - protocol: TCP
      port: 3300
    from:
    - podSelector: {}  # 모든 Pod 접근 허용
    - namespaceSelector:  # 특정 네임스페이스 접근 허용
        matchLabels:
          kubernetes.io/metadata.name: rook-ceph
